# mojo

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  pyproject.toml
bazel/internal/cc-toolchain/tools/: BUILD.bazel  linker-driver.sh  multi-platform-clang++.sh  multi-platform-clang.sh  tools.bzl
benchmark/: BUILD.bazel  README.md  benchmark_config.py  benchmark_datasets.py  benchmark_serving.py  benchmark_throughput.py  metrics.py  pyproject.toml  requirements.txt  serve_replay.py
benchmark/benchmark_shared/: BUILD.bazel  config.py  requests.py  server_metrics.py
benchmark/benchmark_shared/datasets/: __init__.py  arxiv_summarization.py  axolotl.py  batch_job.py  code_debug.py  huggingface.py  interface.py  local.py  obfuscated_conversations.py  random.py  registry.py  sharegpt.py  sonnet.py  types.py  vision_arena.py
benchmark/configs/: base_config.yaml  gemma-3-27b-sonnet-decode-heavy-prefix200.yaml  internvl3-14b-image-description-synthetic.yaml  internvl3-38b-image-description-synthetic.yaml  llama3_1-405b-bf16-code_debug.yaml  mistral-small-24b-arxiv-summarization.yaml  qwen3-14b-arxiv-summarization.yaml  serving_config.yaml  sweep_serving_config.yaml  throughput_config.yaml
max/: BUILD.bazel
max/_core/: BUILD.bazel  __init__.pyi  dialects.pyi  driver.pyi  dtype.pyi  engine.pyi  graph.pyi  nixl.pyi  profiler.pyi  safetensors.pyi
max/_core/dialects/: BUILD.bazel  __init__.pyi  builtin.pyi  kgen.pyi  m.pyi  mo.pyi  mosh.pyi  rmo.pyi
max/_core/dialects/builtin/: __init__.pyi  passes.pyi
max/_core/dialects/mo/: __init__.pyi  passes.pyi
max/_core/dialects/rmo/: __init__.pyi  passes.pyi
max/_core_mojo/: BUILD.bazel  __init__.py  mojo_module.mojo
max/_core_types/: BUILD.bazel  driver.py
max/_mlir/: BUILD.bazel
max/_mlir/_mlir_libs/: BUILD.bazel
max/_mlir/dialects/: BUILD.bazel
max/diagnostics/: BUILD.bazel
max/diagnostics/gpu/: _bgrec.py  _bgrec_main.py  _bindtools.py  _multi.py  _rsmi.py  _types.py
max/driver/: BUILD.bazel  __init__.py  driver.py  tensor.py
max/dtype/: BUILD.bazel  __init__.py  dtype.py
max/engine/: BUILD.bazel  __init__.py  api.py  engine.rst  index.rst
max/entrypoints/: BUILD.bazel  llm.py  pipelines.py
max/entrypoints/cli/: config.py  encode.py  generate.py
max/entrypoints/workers/: __init__.py
max/experimental/: BUILD.bazel  __init__.py  eager.py  functional.py  random.py  tensor.py
max/graph/: dim.py  dtype_promotion.py  graph.py  shape.py  type.py  value.py  weight.py
max/graph/ops/: __init__.py  allgather.py  allreduce.py  buffer.py  call.py  concat.py  conditional.py  constant.py  conv.py  conv_transpose.py  custom.py  elementwise.py  fold.py  gather.py  hann_window.py  matmul.py  quantized.py  random.py  repeat_interleave.py  scatter.py  slice_tensor.py  split.py  tile.py  utils.py  validation.py  where.py  while_loop.py
max/graph/weights/: load_gguf.py  load_pytorch.py  load_safetensors.py
max/interfaces/: BUILD.bazel  __init__.py  audio_generation.py  batch_constructor.py  context.py  engine.py  log_probabilities.py  logit_processors_type.py  lora.py  nested_iterable.py  pipeline.py  queue.py  request.py  scheduler.py  status.py  task.py  text_generation.py  tokenizer.py
max/interfaces/pipeline_variants/: __init__.py  audio_generation.py  embeddings_generation.py  text_generation.py
max/interfaces/utils/: __init__.py  serialization.py  shared_memory.py
max/kernels/benchmarks/: BUILD.bazel
max/mlir/: BUILD.bazel  __init__.py
max/mlir/dialects/: __init__.py  mo.py
max/nn/: BUILD.bazel  __init__.py  clamp.py  conv.py  conv_transpose.py  embedding.py  float8_config.py  float8_ops.py  kernels.py  linear.py  rotary_embedding.py
max/nn/attention/: __init__.py  attention_with_rope.py  interfaces.py  multi_latent_attention.py  multi_latent_attention_fp8.py  ragged_attention.py
max/nn/comm/: allreduce.py
max/nn/data_parallelism/: split_batch.py
max/nn/hooks/: print_hook.py
max/nn/kv_cache/: __init__.py  cache_params.py  manager.py  registry.py
max/nn/layer/: layer.py
max/nn/lora/: attention_lora.py
max/nn/module_v3/: embedding.py  linear.py  module.py  sequential.py
max/nn/moe/: moe.py  moe_fp8.py
max/nn/norm/: __init__.py  layer_norm.py
max/nn/parallel/: __init__.py  numpy_parallel_ops.py
max/nn/sampling/: rejection_sampler.py
max/nn/transformer/: distributed_transformer.py
max/pipelines/: __init__.py  requirements.txt
max/pipelines/architectures/: BUILD.bazel
max/pipelines/core/: __init__.py  context.py  context_validators.py
max/pipelines/lib/: __init__.py  audio_generator_pipeline.py  config.py  config_enums.py  embeddings_pipeline.py  hf_utils.py  kv_cache_config.py  log_probabilities.py  lora.py  lora_config.py  lora_request_processor.py  max_config.py  memory_estimation.py  model_config.py  pipeline.py  registry.py  speculative_decoding.py  speech_token_pipeline.py  tokenizer.py
max/profiler/: BUILD.bazel  __init__.py  motr_tracing.py  tracing.py
max/python/max/: BUILD.bazel
max/serve/: BUILD.bazel  Dockerfile.amd-rocm7  api_server.py  config.py  debug.py  process_control.py  request.py
max/serve/kvcache_agent/: BUILD.bazel
max/serve/mocks/: BUILD.bazel
max/serve/pipelines/: BUILD.bazel  echo_gen.py  llm.py  model_worker.py
max/serve/queue/: lora_queue.py  zmq_queue.py
max/serve/router/: openai_routes.py  sagemaker_routes.py
max/serve/scheduler/: __init__.py  audio_generation_scheduler.py  base.py  data_parallelism_utils.py  decode_scheduler.py  di_dispatchers.py  embeddings_scheduler.py  lora_scheduler_utils.py  prefill_scheduler.py  queues.py  text_batch_constructor.py  text_generation_scheduler.py  utils.py
max/serve/schemas/: kserve.py  openai.py
max/serve/telemetry/: common.py  metrics.py  process_controller.py  stopwatch.py
max/support/: BUILD.bazel  __init__.py  human_readable_formatter.py  image.py  math.py  notebook.py  paths.py
max/torch/: BUILD.bazel  __init__.py  torch.py
tests/max/graph/: BUILD.bazel  conftest.py  test_dtype_promotion.py  test_graph.py  test_type.py  test_weight.py
(+1737 files in other folders)
