[project]
authors = [{ name = "Modular", email = "hello@modular.com" }]
dependencies = [
    "aiohttp",
    "datasets",
    "hf-transfer",
    "huggingface-hub",
    "jinja2",
    "msgspec",
    "numpy",
    "prometheus-client",
    "psutil",
    "taskgroup",
    "tqdm",
    "transformers",
    "typing-extensions",
    "Pillow",
]
description = "MAX Serve benchmarking tools"
name = "benchmarking"
requires-python = ">=3.9,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
benchmarking = { path = ".", editable = true }

[tool.pixi.tasks]
