load("//bazel:api.bzl", "modular_py_library", "pkg_files", "requirement", "strip_prefix")
load("//bazel:config.bzl", "ALLOW_UNUSED_TAG")

modular_py_library(
    name = "benchmark_shared",
    srcs = glob(["**/*.py"]),
    data = glob(["datasets/packaged_data/**/*"]) + [
        "//open-source/max/benchmark:benchmark_config_yaml_files",
    ],
    imports = [".."],
    # Used under the OSS path, but not under the internal path.
    # TODO: Remove when we no longer have internal symlinking to OSS.
    tags = [ALLOW_UNUSED_TAG],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max/pipelines/lib",
        "//SDK/lib/API/python/max/serve",
        requirement("datasets"),
        requirement("huggingface-hub"),
        requirement("msgspec"),
        requirement("numpy"),
        requirement("pillow"),
        requirement("prometheus-client"),
        requirement("psutil"),
        requirement("pyyaml"),
        requirement("requests"),
        requirement("transformers"),
        requirement("typing-extensions"),
    ],
)

pkg_files(
    name = "python_files",
    srcs = glob(["**/*.py"]),
    prefix = "benchmark/benchmark_shared",
    strip_prefix = strip_prefix.from_pkg(""),
    # Used under the OSS path, but not under the internal path.
    # TODO: Remove when we no longer have internal symlinking to OSS.
    tags = [ALLOW_UNUSED_TAG],
    visibility = ["//visibility:public"],
)
