load("//bazel:api.bzl", "modular_nanobind_library")

modular_nanobind_library(
    name = "modules",
    srcs = [
        "driver.cpp",
        "dtype.cpp",
        "engine.cpp",
        "graph.cpp",
        "profiler.cpp",
    ],
    local_defines = [
        # Set definition used in Interop.h to prefix the MLIR package.
        "MLIR_PYTHON_PACKAGE_PREFIX=max._mlir.",
    ],
    nanobind_deps = [
        "//SDK:DriverPython",
        "//SDK:GraphPython",
        "//SDK:ModularFrameworkPython",
        "//SDK:ProfilerPython",
        "//SDK/lib/API/python/max/_core/dialects:MO",
    ],
    deps = [
        "//GenericML:API.headers",
        "//GenericML:GraphCompiler",
        "//GenericML:MaxAPI",
        "//GenericML:modular-framework-common",
        "//ModularFramework/tools/mof",
        "//Support:Base",
        "@llvm-project//llvm:Support",
    ],
)

filegroup(
    name = "stubs",
    srcs = glob(["*.pyi"]),
    visibility = ["//visibility:public"],
)
