load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "_core_mojo",
    srcs = glob(["**/*.py"]),
    data = glob(["**/*.mojo"]) + ["//KGEN/tools/mojo"],
    deps = [
        requirement("numpy"),
        "//SDK/lib/API/python/max/_mojo",
    ],
)

exports_files(glob(["*.mojo"]))
