load("//bazel:api.bzl", "copy_files", "modular_pybind_py_library")

copy_files(
    name = "ir_py",
    srcs = ["@llvm-project//mlir/python:IRPyFiles"],
    outs = ["ir.py"],
)

modular_pybind_py_library(
    name = "_mlir_pybind",
    srcs = [],
    pybind_data = ["//SDK/lib/API/python/max/_mlir/_mlir_libs:_mlir"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "_mlir",
    srcs = [
        ":ir_py",
        "//SDK/lib/API/python/max/_mlir/dialects",
    ],
    tags = ["no-mypy"],  # Upstream files with violations
    visibility = ["//visibility:public"],
    deps = [
        ":_mlir_pybind",
        "//SDK/lib/API/python/max/_mlir/_mlir_libs",
    ],
)
