load("@pip_deps//:requirements.bzl", "requirement")
load("//bazel:api.bzl", "modular_py_library")

modular_py_library(
    name = "driver",
    srcs = glob(["**/*.py"]),
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max/_driver",
        requirement("numpy"),
    ],
)
