load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "driver",
    srcs = glob(["**/*.py"]),
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max/_driver",
        "//SDK/lib/API/python/max/dtype",
        requirement("numpy"),
    ],
)
