load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "engine",
    srcs = glob(["**/*.py"]),
    data = ["py.typed"],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max:_core",
        "//SDK/lib/API/python/max/driver",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/profiler",
        "//open-source/max/mojo/python/mojo",
        requirement("numpy"),
    ],
)
