load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "experimental",
    srcs = [
        "functional.py",
        "random.py",
        "tensor.py",
    ],
    deps = [
        "//SDK/lib/API/python/max/driver",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/engine",
        "//SDK/lib/API/python/max/graph",
        requirement("numpy"),
        requirement("rich"),
        requirement("typing-extensions"),
    ],
)
