load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "experimental",
    srcs = [
        "__init__.py",
        "functional.py",
        "random.py",
        "tensor.py",
    ],
    imports = ["../.."],
    deps = [
        "//SDK/lib/API/python/max/driver",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/engine",
        "//SDK/lib/API/python/max/graph",
        requirement("numpy"),
        requirement("rich"),
        requirement("typing-extensions"),
    ],
)
