load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "nn",
    srcs = glob(["**/*.py"]),
    imports = ["../.."],
    deps = [
        requirement("numpy"),
        requirement("gguf"),
        requirement("msgspec"),
        requirement("rich"),
        requirement("transformers"),
        requirement("typing-extensions"),
        "//SDK/lib/API/python/max/_core_mojo",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/engine",
        "//SDK/lib/API/python/max/experimental",
        "//SDK/lib/API/python/max/graph",
        "//SDK/lib/API/python/max/pipelines/core",
        "//SDK/lib/API/python/max/serve/kvcache_agent",
        "//SDK/lib/API/python/max/support",
    ],
)
