load("//bazel:api.bzl", "copy_files", "modular_py_library", "modular_pybind_extension")

package(default_visibility = ["//visibility:public"])

copy_files(
    name = "py_srcs",
    srcs = ["@llvm-project//mlir/python:MlirLibsPyFiles"],
    outs = ["__init__.py"],
)

copy_files(
    name = "_mlir_pyi",
    srcs = ["@llvm-project//mlir/python:IRPyIFiles"],
    outs = [
        "_mlir/__init__.pyi",
        "_mlir/ir.pyi",
    ],
)

modular_py_library(
    name = "_mlir_libs",
    srcs = [":py_srcs"],
    data = [":_mlir_pyi"],
    visibility = ["//visibility:public"],
)

modular_pybind_extension(
    name = "_mlir",
    srcs = ["//:pybind_mlir_srcs"],
    local_defines = [
        # Set definition used in Interop.h to prefix the MLIR package.
        "MLIR_PYTHON_PACKAGE_PREFIX=max._mlir.",
    ],
    pybind_deps = [
        "//:MLIRBindingsPythonHeaders",
    ],
    tags = ["no-clang-tidy-headers"],
    deps = [
        "//ModularFramework/tools/mof",
    ],
)
